--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.13.3",
     "mongoose": "^4.2.9",
     "morgan": "^1.6.1",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "cors": "^2.8.4"
   },
   "devDependencies": {
     "should": "^7.1.1",
