--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "Assignment4",
+  "engines" : {
+	"node" : "8.11.1"
+	},
   "version": "1.0.0",
   "description": "Routing server-side requests using ExpressJS",
   "main": "server.js",
